# table-print

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
table_print/: __init__.py  core.py
tests/: test_table_print.py
